<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="content_description">Image</string>
    <string name="text_create_account">SIGN UP</string>
    <string name="text_go_login">LOGIN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="hint_username">Username</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolbar_title_home">Home</string>
    <string name="hint_new_tweet">What\'s going on?</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="user_website">Website</string>
    <string name="user_description">Description</string>
</resources>
